# vertex

./: Cargo.toml  flake.nix
src/: error.rs  main.rs
src/app/: mod.rs  router.rs  state.rs
src/handlers/: group.rs  health.rs  member.rs  mod.rs  task.rs  user.rs
src/models/: criticality.rs  db.rs  group.rs  id.rs  member.rs  mod.rs  task.rs  user.rs
src/repository/: group_repository.rs  member_repository.rs  mod.rs  task_repository.rs  user_repository.rs
src/service/: group.rs  member.rs  mod.rs  task.rs  user.rs
