[package]
name = "vertex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["query"] }
jiff = { version = "0.2.23", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0", features = ["macros"] }
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
tokio = { version = "1.52.1", features = ["full"] }
## uuid = { version = "1.23.1", features = ["serde", "v4"] }
