[package]
name = "vertex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
